# slides-rpkimancer-sidrops-ietf112

./: .gitignore  Makefile  README.md  bm-ietf112-sidrops-rpkimancer.md  setup.cfg
rpkimancer_poem/: __init__.py  conjure.py  sigobj.py
rpkimancer_poem/asn1/: RPKI-Poem-2021.asn  __init__.py
