[metadata]
name = rpkimancer-poem
description = An example rpkimancer plugin
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
url = https://github.com/benmaddison/slides-rpkimancer-sidrops-ietf112
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    rpkimancer>=0.1.0, <0.2.0

[options.entry_points]
rpkimancer.asn1.modules =
    RPKI-Poem-2021 = rpkimancer_poem.asn1
rpkimancer.sigobj =
    Poem = rpkimancer_poem.sigobj:Poem
rpkimancer.cli.conjure =
    ConjurePoem = rpkimancer_poem.conjure:ConjurePoem
